// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should render 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="textinput"
  >
    <div
      class="BaseBox-bmPWx edjBu"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx fJyvvB"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="textinput-1-input-2"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Enter name
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="BaseBox-bmPWx BaseInputWrapper__StyledBaseInputWrapper-sc-27jk75-0 kRxJZq iWQtne"
        data-blade-component="base-box"
      >
        <input
          aria-describedby=""
          aria-disabled="false"
          aria-invalid="false"
          aria-required="false"
          autocomplete="off"
          class="StyledBaseInputweb__StyledBaseNativeInput-hsusrk-0 jxivIr"
          data-blade-component="styled-base-input"
          enterkeyhint="enter"
          id="textinput-1-input-2"
          inputmode="text"
          type="text"
          value=""
        />
        <div
          class="BaseBox-bmPWx BaseInputAnimatedBorderweb__BaseInputStyledAnimatedBorder-sc-2cepod-0  dGtNgo"
          data-blade-component="base-box"
        />
      </div>
    </div>
    <div
      class="BaseBox-bmPWx jgxKDg"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should render with icon, prefix, suffix 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="textinput"
  >
    <div
      class="BaseBox-bmPWx edjBu"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx fJyvvB"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="textinput-31-input-32"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Enter company website
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="BaseBox-bmPWx BaseInputWrapper__StyledBaseInputWrapper-sc-27jk75-0 kRxJZq iWQtne"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx fSbYvl"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx eCxLQc"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                data-blade-component="svg-path"
                fill="hsla(216, 27%, 36%, 1)"
              />
              <path
                d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                data-blade-component="svg-path"
                fill="hsla(216, 27%, 36%, 1)"
              />
              <path
                clip-rule="evenodd"
                d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                data-blade-component="svg-path"
                fill="hsla(216, 27%, 36%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="BaseBox-bmPWx iAPQgj"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO ktUwvA"
              data-blade-component="text"
            >
              https://
            </p>
          </div>
        </div>
        <input
          aria-describedby=""
          aria-disabled="false"
          aria-invalid="false"
          aria-required="false"
          autocapitalize="none"
          autocomplete="off"
          class="StyledBaseInputweb__StyledBaseNativeInput-hsusrk-0 ihQHHL"
          data-blade-component="styled-base-input"
          enterkeyhint="go"
          id="textinput-31-input-32"
          inputmode="url"
          placeholder="something"
          prefix="https://"
          type="url"
          value=""
        />
        <div
          class="BaseBox-bmPWx fSbYvl"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx kZoXjP"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO ktUwvA"
              data-blade-component="text"
            >
              .com
            </p>
          </div>
        </div>
        <div
          class="BaseBox-bmPWx BaseInputAnimatedBorderweb__BaseInputStyledAnimatedBorder-sc-2cepod-0  dGtNgo"
          data-blade-component="base-box"
        />
      </div>
    </div>
    <div
      class="BaseBox-bmPWx jgxKDg"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;
